[project]
name = "ProxyDupper"
version = "0.1.0"
description = "Proxy Dupper takes a list of authenticated proxies, groups them by /24 network, generates all IPs in each /24, checks them, and saves the valid ones."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "httpx[socks]>=0.28.1",
    "loguru>=0.7.3",
]
